# ghost-voice-tts

./: .env.example  .gitignore  ADMIN_ANALYTICS_GUIDE.md  IMPLEMENTATION_GUIDE.md  IN_HOUSE_TTS.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_COMPLETE.md  SESSION_SUMMARY.md  docker-compose.yml  loadtest.js  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  middleware.py
app/core/: celery.py  config.py  database.py  logging.py  metrics.py
app/routes/: admin.py  analytics.py
app/schemas/: tts.py
app/services/: admin_dashboard.py  analytics.py  audio_validation.py  cache.py  marketplace.py  model_versioning.py  quota.py  rate_limiter.py  resilience.py  security.py  ssml.py  streaming.py  tts_engine.py
app/tasks/: synthesis.py
app/utils/: cache_keys.py
docker/: Dockerfile
k8s/: api.yaml  database.yaml  workers.yaml
sdk/python/: ghost_voice_tts.py
tests/: test_api.py
