[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-voice-tts"
version = "1.0.0"
description = "Professional text-to-speech service with advanced voice cloning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Ghost Voice TTS", email = "dev@ghostvoice-tts.com"}
]
keywords = [
    "tts",
    "text-to-speech",
    "voice-cloning",
    "speech-synthesis",
    "tortoise-tts",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "sqlmodel==0.0.14",
    "redis==5.0.1",
    "celery==5.3.4",
    "torch==2.1.1",
    "torchaudio==2.1.1",
    "librosa==0.10.0",
    "soundfile==0.12.1",
    "numpy==1.24.3",
    "prometheus-client==0.18.0",
    "structlog==23.2.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

tts = [
    "tortoise-tts==0.2.0",
    "resemblyzer>=0.1.1.dev0",
    "pyannote-audio==3.0.1",
    "transformers==4.35.2",
    "huggingface-hub==0.19.4",
]

s3 = [
    "boto3==1.29.7",
    "botocore==1.32.7",
]

[project.urls]
Homepage = "https://ghostvoice-tts.com"
Documentation = "https://ghostvoice-tts.com/docs"
Repository = "https://github.com/burchdad/ghost-voice-tts"
Issues = "https://github.com/burchdad/ghost-voice-tts/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "sqlmodel"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for rapid development
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]
asyncio_mode = "auto"
